// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginMainHeader className is added to the root element 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-login__main-header extra-class"
  />
</DocumentFragment>
`;

exports[`LoginMainHeader renders with PatternFly Core styles 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-login__main-header"
  />
</DocumentFragment>
`;

exports[`LoginMainHeader title and subtitle are rendered correctly 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-login__main-header"
  >
    <h2
      class="pf-v6-c-title pf-m-3xl"
      data-ouia-component-id="OUIA-Generated-Title-1"
      data-ouia-component-type="PF6/Title"
      data-ouia-safe="true"
    >
      Log in to your account
    </h2>
    <p
      class="pf-v6-c-login__main-header-desc"
    >
      Use LDAP credentials
    </p>
  </div>
</DocumentFragment>
`;
